--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -30,20 +30,29 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>John</td>
-      <td>0912345678</td>
-      <td>1990/01/01</td>
-    </tr>
-    <tr>
-      <td>Alice</td>
-      <td>0987654321</td>
-      <td>1990/02/02</td>
-    </tr>
-    <tr>
-      <td>Bob</td>
-      <td>0123456789</td>
-      <td>1990/03/03</td>
-    </tr>
+    @for (customer of customers(); track customer.name) {
+      <tr>
+        <td>{{ customer.name }}</td>
+        <td>{{ customer.mobile }}</td>
+        <td>{{ customer.birthday }}</td>
+      </tr>
+    }
   </tbody>
 </table>
+
+<nav class="pagination is-centered" role="navigation" aria-label="pagination">
+  <a class="pagination-previous">Previous</a>
+  <a class="pagination-next">Next page</a>
+  <ul class="pagination-list">
+    <li>
+      <a
+        class="pagination-link is-current"
+        aria-label="Page 1"
+        aria-current="page"
+        >1</a
+      >
+    </li>
+    <li><a class="pagination-link" aria-label="Goto page 2">2</a></li>
+    <li><a class="pagination-link" aria-label="Goto page 3">3</a></li>
+  </ul>
+</nav>
