--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -3,19 +3,35 @@
     <div class="field">
       <label class="label">Name</label>
       <div class="control">
-        <input class="input" type="text" placeholder="Text input" />
+        <input
+          class="input"
+          type="text"
+          placeholder="input name"
+          [(value)]="name"
+        />
       </div>
     </div>
     <div class="field">
       <label class="label">Mobile</label>
       <div class="control">
-        <input class="input" type="text" placeholder="Text input" />
+        <input
+          class="input"
+          type="text"
+          placeholder="input mobile"
+          [(value)]="mobile"
+        />
       </div>
     </div>
     <div class="field">
       <label class="label">Birthday</label>
       <div class="control">
-        <input class="input" type="text" placeholder="Text input" />
+        <input
+          class="input"
+          type="text"
+          placeholder="input birthday"
+          placeholder="yyyy-mm-dd"
+          [(value)]="birthday"
+        />
       </div>
     </div>
   </div>
@@ -30,29 +46,49 @@
     </tr>
   </thead>
   <tbody>
-    @for (customer of customers(); track customer.name) {
-      <tr>
-        <td>{{ customer.name }}</td>
-        <td>{{ customer.mobile }}</td>
-        <td>{{ customer.birthday }}</td>
-      </tr>
-    }
+    <!-- @for (customer of customers(); track customer | paginate: config;) { -->
+    <tr *ngFor="let customer of customers() | paginate: config">
+      <td>{{ customer.name }}</td>
+      <td>{{ customer.mobile }}</td>
+      <td>{{ customer.birthday }}</td>
+    </tr>
+    <!-- } -->
   </tbody>
 </table>
 
-<nav class="pagination is-centered" role="navigation" aria-label="pagination">
-  <a class="pagination-previous">Previous</a>
-  <a class="pagination-next">Next page</a>
-  <ul class="pagination-list">
-    <li>
-      <a
-        class="pagination-link is-current"
-        aria-label="Page 1"
-        aria-current="page"
-        >1</a
-      >
-    </li>
-    <li><a class="pagination-link" aria-label="Goto page 2">2</a></li>
-    <li><a class="pagination-link" aria-label="Goto page 3">3</a></li>
-  </ul>
-</nav>
+<pagination-template
+  #p="paginationApi"
+  (pageChange)="config.currentPage = $event"
+>
+  <nav class="pagination is-centered" role="navigation" aria-label="pagination">
+    <a class="pagination-previous" [class.disabled]="p.isFirstPage()">
+      @if (!p.isFirstPage()) {
+        <a (click)="p.previous()"> < </a>
+      }
+    </a>
+    <a class="pagination-next" [class.disabled]="p.isLastPage()">
+      @if (!p.isLastPage()) {
+        <a (click)="p.next()"> > </a>
+      }
+    </a>
+
+    <ul class="pagination-list">
+      @for (page of p.pages; track $index) {
+        <li>
+          @if (p.getCurrent() !== page.value) {
+            <a class="pagination-link" (click)="p.setCurrent(page.value)">
+              {{ page.label }}
+            </a>
+          } @else {
+            <a
+              class="pagination-link is-current"
+              (click)="p.setCurrent(page.value)"
+            >
+              {{ page.label }}
+            </a>
+          }
+        </li>
+      }
+    </ul>
+  </nav>
+</pagination-template>
